Update paths in next pages

--- a/content/data/account-aggregator/fi-data-types.mdx
+++ b/content/data/account-aggregator/fi-data-types.mdx
@@ -112,7 +112,11 @@ We're adding dynamic mock data for more realistic and exhaustive integration tes
   }
 }`}
     </CodeBlockWithCopy>
-    <Element as="a" href="https://specifications.rebit.org.in/api_schema/account_aggregator/documentation/deposit_v1.2.html" target="_blank">
+    <Element
+      as="a"
+      href="https://specifications.rebit.org.in/api_schema/account_aggregator/documentation/deposit_v1.2.html"
+      target="_blank"
+    >
       <Button kind="tertiary" padding="nano">
         View ReBIT schema &#8599;
       </Button>
@@ -192,7 +196,11 @@ We're adding dynamic mock data for more realistic and exhaustive integration tes
   }
 }`}
     </CodeBlockWithCopy>
-    <Element as="a" href="https://specifications.rebit.org.in/api_schema/account_aggregator/documentation/term_deposit_v1.2.html" target="_blank">
+    <Element
+      as="a"
+      href="https://specifications.rebit.org.in/api_schema/account_aggregator/documentation/term_deposit_v1.2.html"
+      target="_blank"
+    >
       <Button kind="tertiary" padding="nano">
         View ReBIT schema &#8599;
       </Button>
@@ -273,14 +281,17 @@ We're adding dynamic mock data for more realistic and exhaustive integration tes
   }
 }`}
     </CodeBlockWithCopy>
-    <Element as="a" href="https://specifications.rebit.org.in/api_schema/account_aggregator/documentation/recurring_deposit_v1.2.html" target="_blank">
+    <Element
+      as="a"
+      href="https://specifications.rebit.org.in/api_schema/account_aggregator/documentation/recur_deposit_v1.2.html"
+      target="_blank"
+    >
       <Button kind="tertiary" padding="nano">
         View ReBIT schema &#8599;
       </Button>
     </Element>
   </details>
 </Card>
-
 
 <br />
 <Card padding="nano" shape="rounded">
@@ -356,7 +367,11 @@ We're adding dynamic mock data for more realistic and exhaustive integration tes
   }
 }`}
     </CodeBlockWithCopy>
-    <Element as="a" href="https://specifications.rebit.org.in/api_schema/account_aggregator/documentation/cd.html" target="_blank">
+    <Element
+      as="a"
+      href="https://specifications.rebit.org.in/api_schema/account_aggregator/documentation/cd.html"
+      target="_blank"
+    >
       <Button kind="tertiary" padding="nano">
         View ReBIT schema &#8599;
       </Button>
@@ -435,7 +450,11 @@ We're adding dynamic mock data for more realistic and exhaustive integration tes
   }
 }`}
     </CodeBlockWithCopy>
-    <Element as="a" href="https://specifications.rebit.org.in/api_schema/account_aggregator/documentation/idr.html" target="_blank">
+    <Element
+      as="a"
+      href="https://specifications.rebit.org.in/api_schema/account_aggregator/documentation/idr.html"
+      target="_blank"
+    >
       <Button kind="tertiary" padding="nano">
         View ReBIT schema &#8599;
       </Button>
@@ -552,7 +571,11 @@ We're adding dynamic mock data for more realistic and exhaustive integration tes
   }
 }`}
     </CodeBlockWithCopy>
-    <Element as="a" href="https://specifications.rebit.org.in/api_schema/account_aggregator/documentation/insurance_policies.html" target="_blank">
+    <Element
+      as="a"
+      href="https://specifications.rebit.org.in/api_schema/account_aggregator/documentation/insurance_policies.html"
+      target="_blank"
+    >
       <Button kind="tertiary" padding="nano">
         View ReBIT schema &#8599;
       </Button>
@@ -652,7 +675,11 @@ We're adding dynamic mock data for more realistic and exhaustive integration tes
   }
 }`}
     </CodeBlockWithCopy>
-    <Element as="a" href="https://specifications.rebit.org.in/api_schema/account_aggregator/documentation/others_ulip.html" target="_blank">
+    <Element
+      as="a"
+      href="https://specifications.rebit.org.in/api_schema/account_aggregator/documentation/others_ulip.html"
+      target="_blank"
+    >
       <Button kind="tertiary" padding="nano">
         View ReBIT schema &#8599;
       </Button>
@@ -718,7 +745,11 @@ We're adding dynamic mock data for more realistic and exhaustive integration tes
   }
 }`}
     </CodeBlockWithCopy>
-    <Element as="a" href="https://specifications.rebit.org.in/api_schema/account_aggregator/documentation/others_epf.html" target="_blank">
+    <Element
+      as="a"
+      href="https://specifications.rebit.org.in/api_schema/account_aggregator/documentation/others_epf.html"
+      target="_blank"
+    >
       <Button kind="tertiary" padding="nano">
         View ReBIT schema &#8599;
       </Button>
@@ -783,7 +814,11 @@ We're adding dynamic mock data for more realistic and exhaustive integration tes
   }
 }`}
     </CodeBlockWithCopy>
-    <Element as="a" href="https://specifications.rebit.org.in/api_schema/account_aggregator/documentation/others_ppf.html" target="_blank">
+    <Element
+      as="a"
+      href="https://specifications.rebit.org.in/api_schema/account_aggregator/documentation/others_ppf.html"
+      target="_blank"
+    >
       <Button kind="tertiary" padding="nano">
         View ReBIT schema &#8599;
       </Button>
@@ -885,7 +920,11 @@ We're adding dynamic mock data for more realistic and exhaustive integration tes
   }
 }`}
     </CodeBlockWithCopy>
-    <Element as="a" href="https://specifications.rebit.org.in/api_schema/account_aggregator/documentation/mutual_funds.html" target="_blank">
+    <Element
+      as="a"
+      href="https://specifications.rebit.org.in/api_schema/account_aggregator/documentation/mutual_funds.html"
+      target="_blank"
+    >
       <Button kind="tertiary" padding="nano">
         View ReBIT schema &#8599;
       </Button>
@@ -978,7 +1017,11 @@ We're adding dynamic mock data for more realistic and exhaustive integration tes
   }
 }`}
     </CodeBlockWithCopy>
-    <Element as="a" href="https://specifications.rebit.org.in/api_schema/account_aggregator/documentation/bonds.html" target="_blank">
+    <Element
+      as="a"
+      href="https://specifications.rebit.org.in/api_schema/account_aggregator/documentation/bonds.html"
+      target="_blank"
+    >
       <Button kind="tertiary" padding="nano">
         View ReBIT schema &#8599;
       </Button>
@@ -1062,7 +1105,11 @@ We're adding dynamic mock data for more realistic and exhaustive integration tes
   }
 }`}
     </CodeBlockWithCopy>
-    <Element as="a" href="https://specifications.rebit.org.in/api_schema/account_aggregator/documentation/debentures.html" target="_blank">
+    <Element
+      as="a"
+      href="https://specifications.rebit.org.in/api_schema/account_aggregator/documentation/debentures.html"
+      target="_blank"
+    >
       <Button kind="tertiary" padding="nano">
         View ReBIT schema &#8599;
       </Button>
@@ -1150,7 +1197,11 @@ We're adding dynamic mock data for more realistic and exhaustive integration tes
   }
 }`}
     </CodeBlockWithCopy>
-    <Element as="a" href="https://specifications.rebit.org.in/api_schema/account_aggregator/documentation/etf.html" target="_blank">
+    <Element
+      as="a"
+      href="https://specifications.rebit.org.in/api_schema/account_aggregator/documentation/etf.html"
+      target="_blank"
+    >
       <Button kind="tertiary" padding="nano">
         View ReBIT schema &#8599;
       </Button>
@@ -1310,7 +1361,11 @@ We're adding dynamic mock data for more realistic and exhaustive integration tes
     }
 }`}
     </CodeBlockWithCopy>
-    <Element as="a" href="https://specifications.rebit.org.in/api_schema/account_aggregator/documentation/nps.html" target="_blank">
+    <Element
+      as="a"
+      href="https://specifications.rebit.org.in/api_schema/account_aggregator/documentation/nps.html"
+      target="_blank"
+    >
       <Button kind="tertiary" padding="nano">
         View ReBIT schema &#8599;
       </Button>
@@ -1403,7 +1458,11 @@ We're adding dynamic mock data for more realistic and exhaustive integration tes
   }
 }`}
     </CodeBlockWithCopy>
-    <Element as="a" href="https://specifications.rebit.org.in/api_schema/account_aggregator/documentation/govt_securities.html" target="_blank">
+    <Element
+      as="a"
+      href="https://specifications.rebit.org.in/api_schema/account_aggregator/documentation/govt_securities.html"
+      target="_blank"
+    >
       <Button kind="tertiary" padding="nano">
         View ReBIT schema &#8599;
       </Button>
@@ -1489,7 +1548,11 @@ We're adding dynamic mock data for more realistic and exhaustive integration tes
   }
 }`}
     </CodeBlockWithCopy>
-    <Element as="a" href="https://specifications.rebit.org.in/api_schema/account_aggregator/documentation/cp.html" target="_blank">
+    <Element
+      as="a"
+      href="https://specifications.rebit.org.in/api_schema/account_aggregator/documentation/cp.html"
+      target="_blank"
+    >
       <Button kind="tertiary" padding="nano">
         View ReBIT schema &#8599;
       </Button>
@@ -1569,7 +1632,11 @@ We're adding dynamic mock data for more realistic and exhaustive integration tes
   }
 }`}
     </CodeBlockWithCopy>
-    <Element as="a" href="https://specifications.rebit.org.in/api_schema/account_aggregator/documentation/reit.html" target="_blank">
+    <Element
+      as="a"
+      href="https://specifications.rebit.org.in/api_schema/account_aggregator/documentation/reit.html"
+      target="_blank"
+    >
       <Button kind="tertiary" padding="nano">
         View ReBIT schema &#8599;
       </Button>
@@ -1646,7 +1713,11 @@ We're adding dynamic mock data for more realistic and exhaustive integration tes
   }
 }`}
     </CodeBlockWithCopy>
-    <Element as="a" href="https://specifications.rebit.org.in/api_schema/account_aggregator/documentation/invit.html" target="_blank">
+    <Element
+      as="a"
+      href="https://specifications.rebit.org.in/api_schema/account_aggregator/documentation/invit.html"
+      target="_blank"
+    >
       <Button kind="tertiary" padding="nano">
         View ReBIT schema &#8599;
       </Button>
@@ -1728,7 +1799,11 @@ We're adding dynamic mock data for more realistic and exhaustive integration tes
   }
 }`}
     </CodeBlockWithCopy>
-    <Element as="a" href="https://specifications.rebit.org.in/api_schema/account_aggregator/documentation/aif.html" target="_blank">
+    <Element
+      as="a"
+      href="https://specifications.rebit.org.in/api_schema/account_aggregator/documentation/aif.html"
+      target="_blank"
+    >
       <Button kind="tertiary" padding="nano">
         View ReBIT schema &#8599;
       </Button>
@@ -1839,7 +1914,11 @@ We're adding dynamic mock data for more realistic and exhaustive integration tes
   }
 }`}
     </CodeBlockWithCopy>
-    <Element as="a" href="https://specifications.rebit.org.in/api_schema/account_aggregator/documentation/sip.html" target="_blank">
+    <Element
+      as="a"
+      href="https://specifications.rebit.org.in/api_schema/account_aggregator/documentation/sip.html"
+      target="_blank"
+    >
       <Button kind="tertiary" padding="nano">
         View ReBIT schema &#8599;
       </Button>
@@ -1928,7 +2007,11 @@ We're adding dynamic mock data for more realistic and exhaustive integration tes
   }
 }`}
     </CodeBlockWithCopy>
-    <Element as="a" href="https://specifications.rebit.org.in/api_schema/account_aggregator/documentation/equities.html" target="_blank">
+    <Element
+      as="a"
+      href="https://specifications.rebit.org.in/api_schema/account_aggregator/documentation/equities.html"
+      target="_blank"
+    >
       <Button kind="tertiary" padding="nano">
         View ReBIT schema &#8599;
       </Button>
@@ -2010,7 +2093,11 @@ We're adding dynamic mock data for more realistic and exhaustive integration tes
   }
 }`}
     </CodeBlockWithCopy>
-    <Element as="a" href="https://specifications.rebit.org.in/api_schema/account_aggregator/documentation/cis.html" target="_blank">
+    <Element
+      as="a"
+      href="https://specifications.rebit.org.in/api_schema/account_aggregator/documentation/cis.html"
+      target="_blank"
+    >
       <Button kind="tertiary" padding="nano">
         View ReBIT schema &#8599;
       </Button>
@@ -2258,7 +2345,11 @@ We're adding dynamic mock data for more realistic and exhaustive integration tes
   }
 }`}
     </CodeBlockWithCopy>
-    <Element as="a" href="https://specifications.rebit.org.in/api_schema/account_aggregator/documentation/gstr1_3b_v1.1.0.html" target="_blank">
+    <Element
+      as="a"
+      href="https://specifications.rebit.org.in/api_schema/account_aggregator/documentation/gstr1_3b_v1.1.0.html"
+      target="_blank"
+    >
       <Button kind="tertiary" padding="nano">
         View ReBIT schema &#8599;
       </Button>
