--- a/content/payments/umap/mandates/recur/check-status.mdx
+++ b/content/payments/umap/mandates/recur/check-status.mdx
@@ -8,9 +8,11 @@ visible_in_sidebar: true
 ## Check mandate payment status
 
 <Text size="small" weight="600">
-    PREREQUISITES&nbsp;
+  PREREQUISITES&nbsp;
 </Text>
-<a href="/payments/umap/mandates/recurring/execute" target="_self">🌟 Execute mandate ↗</a>
+<a href="/payments/umap/mandates/recur/execute" target="_self">
+  🌟 Execute mandate ↗
+</a>
 
 <br />
 
@@ -20,61 +22,57 @@ The merchant can use **<i>check status API</i>** to check payment status of the 
 and **<i>check status history API</i>** to payment status of the last 5 payments associated to the mandate
 
 <Tabs
-    tabs={[
-        {
-            key: "tab1",
-            label: "Check status",
-            content: (
-                <Text>
-                    <table>
-                        <tbody>
-                            <tr>
-                                <th>Staging host</th>
-                                <td>
-                                    <code>
-                                        https://umap-dev-core.setu.co/api
-                                    </code>
-                                </td>
-                            </tr>
-                            <tr>
-                                <th>Method</th>
-                                <td>
-                                    <code>GET</code>
-                                </td>
-                            </tr>
-                            <tr>
-                                <th>Path</th>
-                                <td>
-                                    <code>
-                                        /v1/merchants/payments/product-instances/&#123;mandateId&#125;/last
-                                    </code>
-                                </td>
-                            </tr>
-                            <tr>
-                                <th>Header</th>
-                                <td>
-                                    <code>merchantId</code>
-                                    <br />
-                                    <code>Authorization</code>: Bearer &lt;
-                                    <b>insert_token_here</b>&gt;. Generate this
-                                    token using{" "}
-                                    <a
-                                        href="/payments/umap/api-integration"
-                                        target="_blank"
-                                    >
-                                        OAuth
-                                    </a>
-                                    .<br />
-                                    <br />
-                                    <code>Content-Type</code>—will be{" "}
-                                    <code>application/json</code>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                    <h6>Sample response</h6>
-                    <CodeBlockWithCopy language="json">
-                        {`{
+  tabs={[
+    {
+      key: "tab1",
+      label: "Check status",
+      content: (
+        <Text>
+          <table>
+            <tbody>
+              <tr>
+                <th>Staging host</th>
+                <td>
+                  <code>https://umap-dev-core.setu.co/api</code>
+                </td>
+              </tr>
+              <tr>
+                <th>Method</th>
+                <td>
+                  <code>GET</code>
+                </td>
+              </tr>
+              <tr>
+                <th>Path</th>
+                <td>
+                  <code>
+                    /v1/merchants/payments/product-instances/&#123;mandateId&#125;/last
+                  </code>
+                </td>
+              </tr>
+              <tr>
+                <th>Header</th>
+                <td>
+                  <code>merchantId</code>
+                  <br />
+                  <code>Authorization</code>: Bearer &lt;
+                  <b>insert_token_here</b>&gt;. Generate this token using <a
+                    href="/payments/umap/api-integration"
+                    target="_blank"
+                  >
+                    OAuth
+                  </a>
+                  .<br />
+                  <br />
+                  <code>Content-Type</code>—will be{" "}
+                  <code>application/json</code>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+          <h6>Sample response</h6>
+          <CodeBlockWithCopy language="json">
+            {`{
     "amount": 10000,
     "createdAt": "2023-09-04 12:08:20.202644 +0530 IST",
     "currency": "INR",
@@ -91,83 +89,78 @@ and **<i>check status history API</i>** to payment status of the last 5 payments
     "txnId": "SETmBZkQOV0M7wyyP1V4PIFhRSzW5eSjmYI",
     "txnNote": "testpay"
 }`}
-                    </CodeBlockWithCopy>
-                    <b>In the above response:</b>
-                    <ul>
-                        <li>
-                            <code>id</code> is a unique ID that is associated
-                            with this mandate payment and can be used to track
-                            it later.
-                        </li>
-                    </ul>
-                    <p>
-                        To know more about all the API params, please refer to
-                        the API documentation{" "}
-                        <a
-                            href="/payments/umap/api-reference#/category~payments/operation~payments#fetchLastByProductInstanceId"
-                            target="_blank"
-                        >
-                            here
-                        </a>
-                        .
-                    </p>
-                </Text>
-            ),
-        },
-        {
-            key: "tab2",
-            label: "Check status history",
-            content: (
-                <Text>
-                    <table>
-                        <tbody>
-                            <tr>
-                                <th>Staging host</th>
-                                <td>
-                                    <code>
-                                        https://umap-dev-core.setu.co/api
-                                    </code>
-                                </td>
-                            </tr>
-                            <tr>
-                                <th>Method</th>
-                                <td>
-                                    <code>GET</code>
-                                </td>
-                            </tr>
-                            <tr>
-                                <th>Path</th>
-                                <td>
-                                    <code>
-                                        /v1/merchants/payments/product-instances/&#123;mandateId&#125;/history
-                                    </code>
-                                </td>
-                            </tr>
-                            <tr>
-                                <th>Header</th>
-                                <td>
-                                    <code>merchantId</code>
-                                    <br />
-                                    <code>Authorization</code>: Bearer &lt;
-                                    <b>insert_token_here</b>&gt;. Generate this
-                                    token using{" "}
-                                    <a
-                                        href="/payments/umap/api-integration"
-                                        target="_blank"
-                                    >
-                                        OAuth
-                                    </a>
-                                    .<br />
-                                    <br />
-                                    <code>Content-Type</code>—will be{" "}
-                                    <code>application/json</code>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                    <h6>Sample response</h6>
-                    <CodeBlockWithCopy language="json">
-                        {`{
+          </CodeBlockWithCopy>
+          <b>In the above response:</b>
+          <ul>
+            <li>
+              <code>id</code> is a unique ID that is associated with this
+              mandate payment and can be used to track it later.
+            </li>
+          </ul>
+          <p>
+            To know more about all the API params, please refer to the API
+            documentation{" "}
+            <a
+              href="/payments/umap/api-reference#/category~payments/operation~payments#fetchLastByProductInstanceId"
+              target="_blank"
+            >
+              here
+            </a>
+            .
+          </p>
+        </Text>
+      ),
+    },
+    {
+      key: "tab2",
+      label: "Check status history",
+      content: (
+        <Text>
+          <table>
+            <tbody>
+              <tr>
+                <th>Staging host</th>
+                <td>
+                  <code>https://umap-dev-core.setu.co/api</code>
+                </td>
+              </tr>
+              <tr>
+                <th>Method</th>
+                <td>
+                  <code>GET</code>
+                </td>
+              </tr>
+              <tr>
+                <th>Path</th>
+                <td>
+                  <code>
+                    /v1/merchants/payments/product-instances/&#123;mandateId&#125;/history
+                  </code>
+                </td>
+              </tr>
+              <tr>
+                <th>Header</th>
+                <td>
+                  <code>merchantId</code>
+                  <br />
+                  <code>Authorization</code>: Bearer &lt;
+                  <b>insert_token_here</b>&gt;. Generate this token using <a
+                    href="/payments/umap/api-integration"
+                    target="_blank"
+                  >
+                    OAuth
+                  </a>
+                  .<br />
+                  <br />
+                  <code>Content-Type</code>—will be{" "}
+                  <code>application/json</code>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+          <h6>Sample response</h6>
+          <CodeBlockWithCopy language="json">
+            {`{
   "payments": [
     {
       "amount": 10000,
@@ -207,28 +200,28 @@ and **<i>check status history API</i>** to payment status of the last 5 payments
     }
   ]
 }`}
-                    </CodeBlockWithCopy>
-                    <p>
-                        To know more about all the API params, please refer to
-                        the API documentation{" "}
-                        <a
-                            href="/payments/umap/api-reference#/category~payments/operation~payments#fetchHistoryByProductInstanceId"
-                            target="_blank"
-                        >
-                            here
-                        </a>
-                        .
-                    </p>
-                </Text>
-            ),
-        },
-    ]}
+          </CodeBlockWithCopy>
+          <p>
+            To know more about all the API params, please refer to the API
+            documentation{" "}
+            <a
+              href="/payments/umap/api-reference#/category~payments/operation~payments#fetchHistoryByProductInstanceId"
+              target="_blank"
+            >
+              here
+            </a>
+            .
+          </p>
+        </Text>
+      ),
+    },
+  ]}
 />
 
 <NextPage
-    info={{
-        description: "Other operations that can be performed on a mandate.  ",
-        slug: "/payments/umap/mandates/generic",
-        title: "Generic Operations",
-    }}
+  info={{
+    description: "Other operations that can be performed on a mandate.  ",
+    slug: "/payments/umap/mandates/generic",
+    title: "Generic Operations",
+  }}
 />
