--- a/content/payments/umap/notifications/customer-vpa-verification.mdx
+++ b/content/payments/umap/notifications/customer-vpa-verification.mdx
@@ -6,26 +6,36 @@ visible_in_sidebar: true
 ---
 
 ## Notifications and alerts for customer VPA verification
-These statuses are relevant for the VPA verification done under the <a href="/payments/umap/payments/collect-request" target="_self">UPI payments collect request</a> product.
+
+These statuses are relevant for the VPA verification done under the <a href="/payments/umap/payments/collect" target="_self">UPI payments collect request</a> product.
 
 ### Details for customer VPA verification statuses
+
 <Text>
-   <ul>
-      <li><code>customer_vpa.valid</code>&nbsp;Provided VPA is valid and associated with a bank account</li>
-      <li><code>customer_vpa.invalid</code>&nbsp;Provided VPA is invalid and account details could not be fetched</li>
-      <li><code>customer_vpa.failed</code>&nbsp;Failed to fetch VPA details</li>
-   </ul>
+  <ul>
+    <li>
+      <code>customer_vpa.valid</code>&nbsp;Provided VPA is valid and associated
+      with a bank account
+    </li>
+    <li>
+      <code>customer_vpa.invalid</code>&nbsp;Provided VPA is invalid and account
+      details could not be fetched
+    </li>
+    <li>
+      <code>customer_vpa.failed</code>&nbsp;Failed to fetch VPA details
+    </li>
+  </ul>
 </Text>
 
 <Tabs
-   tabs={[
-         {
-            key: "1",
-            label: "VPA is valid",
-            content: (
-               <>
-                  <CodeBlockWithCopy language="json">
-{`{
+  tabs={[
+    {
+      key: "1",
+      label: "VPA is valid",
+      content: (
+        <>
+          <CodeBlockWithCopy language="json">
+            {`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
@@ -41,17 +51,17 @@ These statuses are relevant for the VPA verification done under the <a href="/pa
    "reason": {}
 }
 `}
-                  </CodeBlockWithCopy>
-               </>
-            ),
-         },
-         {
-            key: "2",
-            label: "VPA is invalid",
-            content: (
-               <>
-                     <CodeBlockWithCopy language="json">
-{`{
+          </CodeBlockWithCopy>
+        </>
+      ),
+    },
+    {
+      key: "2",
+      label: "VPA is invalid",
+      content: (
+        <>
+          <CodeBlockWithCopy language="json">
+            {`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
@@ -64,17 +74,17 @@ These statuses are relevant for the VPA verification done under the <a href="/pa
    "customerVpa": "deku20231030@okokaxis",
    "reason": {}
 }`}
-                     </CodeBlockWithCopy>
-               </>
-            ),
-         },
-         {
-            key: "3",
-            label: "VPA verification failed",
-            content: (
-               <>
-                     <CodeBlockWithCopy language="json">
-{`{
+          </CodeBlockWithCopy>
+        </>
+      ),
+    },
+    {
+      key: "3",
+      label: "VPA verification failed",
+      content: (
+        <>
+          <CodeBlockWithCopy language="json">
+            {`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
@@ -87,9 +97,9 @@ These statuses are relevant for the VPA verification done under the <a href="/pa
    "customerVpa": "deku20231030@okokaxis",
    "reason": {}
 }`}
-                     </CodeBlockWithCopy>
-               </>
-            ),
-         },
-   ]}
+          </CodeBlockWithCopy>
+        </>
+      ),
+    },
+  ]}
 />
