--- a/content/payments/umap/payments/collect/create-collect-request.mdx
+++ b/content/payments/umap/payments/collect/create-collect-request.mdx
@@ -6,60 +6,66 @@ visible_in_sidebar: true
 ---
 
 ## Create collect request
+
 This API can be used to create a collect request that initiates a UPI transaction on the user's UPI app by taking vpa as an input.
+
 <table>
-    <tbody>
-        <tr>
-            <th>Staging host</th>
-            <td>
-                <code>https://umap-dev-core.setu.co/api</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Method</th>
-            <td>
-                <code>POST</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Path</th>
-            <td>
-                <code>/v1/merchants/collect</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Header</th>
-            <td>
-                <code>merchantId</code><br/>
-                <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
-                Generate this token using <a
-                    href="/payments/upi-deeplinks/resources/oauth"
-                    target="_blank">
-                    OAuth
-                </a> or <a
-                    href="/payments/upi-deeplinks/resources/jwt"
-                    target="_blank">
-                    JWT
-                </a>.<br />
-                <br />
-                <code>Content-Type</code>—will be <code>application/json</code>
-            </td>
-        </tr>
-        <tr>
-            <th>API reference</th>
-            <td>
-                <a href="/payments/umap/api-reference#/category~collect/operation~collect#create"target="_blank">
-                    Create collect request ↗
-                </a>
-            </td>
-        </tr>
-    </tbody>
+  <tbody>
+    <tr>
+      <th>Staging host</th>
+      <td>
+        <code>https://umap-dev-core.setu.co/api</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Method</th>
+      <td>
+        <code>POST</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Path</th>
+      <td>
+        <code>/v1/merchants/collect</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Header</th>
+      <td>
+        <code>merchantId</code>
+        <br />
+        <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
+        Generate this token using{" "}
+        <a href="/payments/upi-deeplinks/resources/oauth" target="_blank">
+          OAuth
+        </a>{" "}
+        or{" "}
+        <a href="/payments/upi-deeplinks/resources/jwt" target="_blank">
+          JWT
+        </a>
+        .<br />
+        <br />
+        <code>Content-Type</code>—will be <code>application/json</code>
+      </td>
+    </tr>
+    <tr>
+      <th>API reference</th>
+      <td>
+        <a
+          href="/payments/umap/api-reference#/category~collect/operation~collect#create"
+          target="_blank"
+        >
+          Create collect request ↗
+        </a>
+      </td>
+    </tr>
+  </tbody>
 </table>
 
 ###### Sample request
 
 <CodeBlockWithCopy language="json">
-    {`{
+  {`{
     "amount": 10000,
     "currency": "INR",
     "customerVpa": "dekup@okhdfc",
@@ -75,13 +81,15 @@ This API can be used to create a collect request that initiates a UPI transactio
 </CodeBlockWithCopy>
 
 <Element as="ul">
-    <li><code>productConfigId</code> is an optional field.</li>
+  <li>
+    <code>productConfigId</code> is an optional field.
+  </li>
 </Element>
 
 ###### Sample response
 
 <CodeBlockWithCopy language="json">
-    {`{
+  {`{
   "amount": 10000,
   "createdAt": "2023-09-04 12:08:20.202644 +0530 IST",
   "currency": "INR",
@@ -103,65 +111,67 @@ This API can be used to create a collect request that initiates a UPI transactio
 
 <hr class="primary" />
 
-
-
 ## Check collect request status
 
 Since collect request directly initiates a transaction on customer's UPI app. The collect request status can also be used to check status of both the transaction and the collect request itself.
 
 <table>
-    <tbody>
-        <tr>
-            <th>Staging host</th>
-            <td>
-                <code>https://umap-dev-core.setu.co/api</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Method</th>
-            <td>
-                <code>GET</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Path</th>
-            <td>
-                <code>/v1/merchants/collect/&#123;id&#125;</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Header</th>
-            <td>
-                <code>merchantId</code><br/>
-                <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
-                Generate this token using <a
-                    href="/payments/upi-deeplinks/resources/oauth"
-                    target="_blank">
-                    OAuth
-                </a> or <a
-                    href="/payments/upi-deeplinks/resources/jwt"
-                    target="_blank">
-                    JWT
-                </a>.<br />
-                <br />
-                <code>Content-Type</code>—will be <code>application/json</code>
-            </td>
-        </tr>
-        <tr>
-            <th>API reference</th>
-            <td>
-                <a href="/payments/umap/api-reference#/category~collect/operation~collect#fetchById"target="_blank">
-                    Check collect request status ↗
-                </a>
-            </td>
-        </tr>
-    </tbody>
+  <tbody>
+    <tr>
+      <th>Staging host</th>
+      <td>
+        <code>https://umap-dev-core.setu.co/api</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Method</th>
+      <td>
+        <code>GET</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Path</th>
+      <td>
+        <code>/v1/merchants/collect/&#123;id&#125;</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Header</th>
+      <td>
+        <code>merchantId</code>
+        <br />
+        <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
+        Generate this token using{" "}
+        <a href="/payments/upi-deeplinks/resources/oauth" target="_blank">
+          OAuth
+        </a>{" "}
+        or{" "}
+        <a href="/payments/upi-deeplinks/resources/jwt" target="_blank">
+          JWT
+        </a>
+        .<br />
+        <br />
+        <code>Content-Type</code>—will be <code>application/json</code>
+      </td>
+    </tr>
+    <tr>
+      <th>API reference</th>
+      <td>
+        <a
+          href="/payments/umap/api-reference#/category~collect/operation~collect#fetchById"
+          target="_blank"
+        >
+          Check collect request status ↗
+        </a>
+      </td>
+    </tr>
+  </tbody>
 </table>
 
 ###### Sample response
 
 <CodeBlockWithCopy language="json">
-    {`{
+  {`{
   "amount": 10000,
   "closedAt": "2023-09-04 12:08:20.202644 +0530 IST",
   "createdAt": "2023-09-04 12:08:20.202644 +0530 IST",
@@ -193,12 +203,11 @@ Since collect request directly initiates a transaction on customer's UPI app. Th
 <hr class="primary" />
 
 <NextPage
-    info={{
-        description:
-            "Check payment status associated with collect request.",
-        slug: "/payments/umap/payments/collect-request/check-status",
-        title: "Check payment status",
-    }}
+  info={{
+    description: "Check payment status associated with collect request.",
+    slug: "/payments/umap/payments/collect/check-status",
+    title: "Check payment status",
+  }}
 />
 
 <WasPageHelpful />
