--- a/content/payments/umap/payments/collect/verify-customer-vpa-api.mdx
+++ b/content/payments/umap/payments/collect/verify-customer-vpa-api.mdx
@@ -7,61 +7,72 @@ visible_in_sidebar: true
 
 ## Verify customer VPA
 
-<p>This gives a merchant an information about the <b><i>customer vpa, payment mode</i></b> which helps the merchant to decide whether to initiate the collect request or not.</p>
+<p>
+  This gives a merchant an information about the{" "}
+  <b>
+    <i>customer vpa, payment mode</i>
+  </b>{" "}
+  which helps the merchant to decide whether to initiate the collect request or
+  not.
+</p>
 
 <table>
-    <tbody>
-        <tr>
-            <th>Staging host</th>
-            <td>
-                <code>https://umap-dev-core.setu.co/api</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Method</th>
-            <td>
-                <code>POST</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Path</th>
-            <td>
-                <code>/v1/merchants/customer-vpas/verify</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Header</th>
-            <td>
-                <code>merchantId</code><br/>
-                <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
-                Generate this token using <a
-                    href="/payments/upi-deeplinks/resources/oauth"
-                    target="_blank">
-                    OAuth
-                </a> or <a
-                    href="/payments/upi-deeplinks/resources/jwt"
-                    target="_blank">
-                    JWT
-                </a>.<br />
-                <br />
-                <code>Content-Type</code>—will be <code>application/json</code>
-            </td>
-        </tr>
-        <tr>
-            <th>API reference</th>
-            <td>
-                <a href="/payments/umap/api-reference#/category~customer-vpa/operation~customer-vpa#verify"target="_blank">
-                    Verify customer VPA ↗
-                </a>
-            </td>
-        </tr>
-    </tbody>
+  <tbody>
+    <tr>
+      <th>Staging host</th>
+      <td>
+        <code>https://umap-dev-core.setu.co/api</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Method</th>
+      <td>
+        <code>POST</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Path</th>
+      <td>
+        <code>/v1/merchants/customer-vpas/verify</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Header</th>
+      <td>
+        <code>merchantId</code>
+        <br />
+        <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
+        Generate this token using{" "}
+        <a href="/payments/upi-deeplinks/resources/oauth" target="_blank">
+          OAuth
+        </a>{" "}
+        or{" "}
+        <a href="/payments/upi-deeplinks/resources/jwt" target="_blank">
+          JWT
+        </a>
+        .<br />
+        <br />
+        <code>Content-Type</code>—will be <code>application/json</code>
+      </td>
+    </tr>
+    <tr>
+      <th>API reference</th>
+      <td>
+        <a
+          href="/payments/umap/api-reference#/category~customer-vpa/operation~customer-vpa#verify"
+          target="_blank"
+        >
+          Verify customer VPA ↗
+        </a>
+      </td>
+    </tr>
+  </tbody>
 </table>
 
 ###### Sample request
 
 <CodeBlockWithCopy language="json">
-    {`{
+  {`{
     "customerVpa": "dekup@okokaxis",
     "merchantReferenceId": "1240689979139556557"
 }`}
@@ -70,7 +81,7 @@ visible_in_sidebar: true
 ###### Sample response
 
 <CodeBlockWithCopy language="json">
-    {`{
+  {`{
   "createdAt": "2023-09-04 12:08:20.202644 +0530 IST",
   "customerName": "deku",
   "customerVpa": "ram@okhdfc",
@@ -81,16 +92,14 @@ visible_in_sidebar: true
 }`}
 </CodeBlockWithCopy>
 
-
 <hr class="primary" />
 
 <NextPage
-    info={{
-        description:
-            "Create collect request",
-        slug: "/payments/umap/payments/collect-request/create-collect-request",
-        title: "Create collect request",
-    }}
+  info={{
+    description: "Create collect request",
+    slug: "/payments/umap/payments/collect/create-collect-request",
+    title: "Create collect request",
+  }}
 />
 
 <WasPageHelpful />
