--- a/content/payments/umap/payments/flash/create-payment-link.mdx
+++ b/content/payments/umap/payments/flash/create-payment-link.mdx
@@ -7,55 +7,65 @@ visible_in_sidebar: true
 
 ## Create payment link
 
-<p>The merchant will have to call the <b><i>create payment link API</i></b> with the correct set of parameters.</p>
+<p>
+  The merchant will have to call the{" "}
+  <b>
+    <i>create payment link API</i>
+  </b>{" "}
+  with the correct set of parameters.
+</p>
 
 <table>
-    <tbody>
-        <tr>
-            <th>Staging host</th>
-            <td>
-                <code>https://umap-dev-core.setu.co/api</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Method</th>
-            <td>
-                <code>POST</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Path</th>
-            <td>
-                <code>/v1/merchants/payment-links</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Header</th>
-            <td>
-                <code>merchantId</code><br/>
-                <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
-                Generate this token using <a
-                    href="/payments/upi-deeplinks/resources/oauth"
-                    target="_blank">
-                    OAuth
-                </a> or <a
-                    href="/payments/upi-deeplinks/resources/jwt"
-                    target="_blank">
-                    JWT
-                </a>.<br />
-                <br />
-                <code>Content-Type</code>—will be <code>application/json</code>
-            </td>
-        </tr>
-        <tr>
-            <th>API reference</th>
-            <td>
-                <a href="/payments/umap/api-reference#/category~payment-link/operation~payment-link#create"target="_blank">
-                    Create Payment Link ↗
-                </a>
-            </td>
-        </tr>
-    </tbody>
+  <tbody>
+    <tr>
+      <th>Staging host</th>
+      <td>
+        <code>https://umap-dev-core.setu.co/api</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Method</th>
+      <td>
+        <code>POST</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Path</th>
+      <td>
+        <code>/v1/merchants/payment-links</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Header</th>
+      <td>
+        <code>merchantId</code>
+        <br />
+        <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
+        Generate this token using{" "}
+        <a href="/payments/upi-deeplinks/resources/oauth" target="_blank">
+          OAuth
+        </a>{" "}
+        or{" "}
+        <a href="/payments/upi-deeplinks/resources/jwt" target="_blank">
+          JWT
+        </a>
+        .<br />
+        <br />
+        <code>Content-Type</code>—will be <code>application/json</code>
+      </td>
+    </tr>
+    <tr>
+      <th>API reference</th>
+      <td>
+        <a
+          href="/payments/umap/api-reference#/category~payment-link/operation~payment-link#create"
+          target="_blank"
+        >
+          Create Payment Link ↗
+        </a>
+      </td>
+    </tr>
+  </tbody>
 </table>
 
 ###### Sample request
@@ -82,18 +92,23 @@ visible_in_sidebar: true
   "transactionNote": "testpay"
 }`}
           </CodeBlockWithCopy>
-        <Element as="ul">
-        <li><code>amount</code> is a mandatory field.</li>
-        <li><code>productConfigId</code> is an optional field.</li>
-        </Element>
-        <Callout type="note">
-            By creating a payment link with paymentType as <code>pay_single</code>
+          <Element as="ul">
+            <li>
+              <code>amount</code> is a mandatory field.
+            </li>
+            <li>
+              <code>productConfigId</code> is an optional field.
+            </li>
+          </Element>
+          <Callout type="note">
+            By creating a payment link with paymentType as{" "}
+            <code>pay_single</code>
             you can accept the payment only once.
-        </Callout>
+          </Callout>
         </>
       ),
     },
-     {
+    {
       key: "2",
       label: "Pay Multi",
       content: (
@@ -113,23 +128,28 @@ visible_in_sidebar: true
 }`}
           </CodeBlockWithCopy>
           <Element as="ul">
-            <li><code>amount</code> is an optional field.</li>
-            <li><code>productConfigId</code> is an optional field.</li>
-        </Element>
-        <Callout type="note">
-            By creating a payment link with paymentType as <code>pay_multi</code>
+            <li>
+              <code>amount</code> is an optional field.
+            </li>
+            <li>
+              <code>productConfigId</code> is an optional field.
+            </li>
+          </Element>
+          <Callout type="note">
+            By creating a payment link with paymentType as{" "}
+            <code>pay_multi</code>
             you can accept the payment more than once.
-        </Callout>
+          </Callout>
         </>
       ),
-    }
+    },
   ]}
 />
 
 ###### Sample response
 
 <CodeBlockWithCopy language="json">
-    {`{
+  {`{
     "amount":10000
     "createdAt":"2023-09-04 12:08:20.202644 +0530 IST"
     "currency":"INR"
@@ -153,67 +173,82 @@ visible_in_sidebar: true
 }`}
 </CodeBlockWithCopy>
 
-
 <hr class="primary" />
 
 ## Check payment link status
-<Callout type='tip'>This API fetches status of the payment-link itself, not the payment done using it </Callout>
-<br/>
-<p>The merchant can also get the payment link status by payment link id by calling <b><i>check payment link status API</i></b> which can be used for debugging or knowing if payment link is active, inactive or expired.</p>
-<br/>
+
+<Callout type="tip">
+  This API fetches status of the payment-link itself, not the payment done using
+  it{" "}
+</Callout>
+<br />
+<p>
+  The merchant can also get the payment link status by payment link id by
+  calling{" "}
+  <b>
+    <i>check payment link status API</i>
+  </b>{" "}
+  which can be used for debugging or knowing if payment link is active, inactive
+  or expired.
+</p>
+<br />
 <table>
-    <tbody>
-         <tr>
-            <th>Staging host</th>
-            <td>
-                <code>https://umap-dev-core.setu.co/api</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Method</th>
-            <td>
-                <code>GET</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Path</th>
-            <td>
-                <code>/v1/merchants/payment-links/&#123;id&#125;</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Header</th>
-            <td>
-                <code>merchantId</code><br/>
-                <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
-                Generate this token using <a
-                    href="/payments/upi-deeplinks/resources/oauth"
-                    target="_blank">
-                    OAuth
-                </a> or <a
-                    href="/payments/upi-deeplinks/resources/jwt"
-                    target="_blank">
-                    JWT
-                </a>.<br />
-                <br />
-                <code>Content-Type</code>—will be <code>application/json</code>
-            </td>
-        </tr>
-        <tr>
-            <th>API reference</th>
-            <td>
-                <a href="/payments/umap/api-reference#/category~payment-link/operation~payment-link#fetchById"target="_blank">
-                    Check Payment Link Status ↗
-                </a>
-            </td>
-        </tr>
-    </tbody>
+  <tbody>
+    <tr>
+      <th>Staging host</th>
+      <td>
+        <code>https://umap-dev-core.setu.co/api</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Method</th>
+      <td>
+        <code>GET</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Path</th>
+      <td>
+        <code>/v1/merchants/payment-links/&#123;id&#125;</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Header</th>
+      <td>
+        <code>merchantId</code>
+        <br />
+        <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
+        Generate this token using{" "}
+        <a href="/payments/upi-deeplinks/resources/oauth" target="_blank">
+          OAuth
+        </a>{" "}
+        or{" "}
+        <a href="/payments/upi-deeplinks/resources/jwt" target="_blank">
+          JWT
+        </a>
+        .<br />
+        <br />
+        <code>Content-Type</code>—will be <code>application/json</code>
+      </td>
+    </tr>
+    <tr>
+      <th>API reference</th>
+      <td>
+        <a
+          href="/payments/umap/api-reference#/category~payment-link/operation~payment-link#fetchById"
+          target="_blank"
+        >
+          Check Payment Link Status ↗
+        </a>
+      </td>
+    </tr>
+  </tbody>
 </table>
 
 ###### Sample response
 
 <CodeBlockWithCopy language="json">
-    {`{
+  {`{
   "amount": 10000,
   "closedAt": "2023-09-04 12:08:20.202644 +0530 IST",
   "createdAt": "2023-09-04 12:08:20.202644 +0530 IST",
@@ -246,14 +281,12 @@ visible_in_sidebar: true
 }`}
 </CodeBlockWithCopy>
 
-
 <NextPage
-    info={{
-        description:
-            "Check payment status associated with payment link.",
-        slug: "/payments/umap/payments/intent-qr/check-status",
-        title: "Check payment status",
-    }}
+  info={{
+    description: "Check payment status associated with payment link.",
+    slug: "/payments/umap/payments/flash/check-status",
+    title: "Check payment status",
+  }}
 />
 
 <WasPageHelpful />
