--- a/content/payments/umap/mandates/one-shot/check-status.mdx
+++ b/content/payments/umap/mandates/one-shot/check-status.mdx
@@ -8,59 +8,62 @@ visible_in_sidebar: true
 ## Check mandate payment status
 
 <Text size="small" weight="600">
-    PREREQUISITES&nbsp;
+  PREREQUISITES&nbsp;
 </Text>
-<a href="/payments/umap/mandates/otm/execute" target="_self">🌟 Execute mandate ↗</a>
-
+<a href="/payments/umap/mandates/one-shot/execute" target="_self">
+  🌟 Execute mandate ↗
+</a>
 
 <br />
 
 The merchant can use the **<i>check status API</i>** to check mandate payment status.
 
 <table>
-    <tbody>
-        <tr>
-            <th>Staging host</th>
-            <td>
-                <code>https://umap-dev-core.setu.co/api</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Method</th>
-            <td>
-                <code>GET</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Path</th>
-            <td>
-                <code>
-                    /v1/merchants/payments/product-instances/&#123;mandateId&#125;/last
-                </code>
-            </td>
-        </tr>
-        <tr>
-            <th>Header</th>
-            <td>
-                <code>merchantId</code>
-                <br />
-                <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>
-                &gt;. Generate this token using{" "}
-                <a href="/payments/umap/api-integration" target="_blank">
-                    OAuth
-                </a>
-                .<br />
-                <br />
-                <code>Content-Type</code>—will be <code>application/json</code>
-            </td>
-        </tr>
-    </tbody>
+  <tbody>
+    <tr>
+      <th>Staging host</th>
+      <td>
+        <code>https://umap-dev-core.setu.co/api</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Method</th>
+      <td>
+        <code>GET</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Path</th>
+      <td>
+        <code>
+          /v1/merchants/payments/product-instances/&#123;mandateId&#125;/last
+        </code>
+      </td>
+    </tr>
+    <tr>
+      <th>Header</th>
+      <td>
+        <code>merchantId</code>
+        <br />
+        <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>
+        &gt;. Generate this token using <a
+          href="/payments/umap/api-integration"
+          target="_blank"
+        >
+          OAuth
+        </a>
+        .<br />
+        <br />
+        <code>Content-Type</code>—will be <code>application/json</code>
+      </td>
+    </tr>
+  </tbody>
 </table>
 
 ###### Sample response
 
 <CodeBlockWithCopy language="json">
-    {`{
+  {`{
   "amount": 10000,
   "createdAt": "2023-09-04 12:08:20.202644 +0530 IST",
   "currency": "INR",
@@ -81,14 +84,14 @@ The merchant can use the **<i>check status API</i>** to check mandate payment st
 
 **In the above response:**
 
--   `id` is a unique ID that is associated with this mandate payment and can be used to track it later.
+- `id` is a unique ID that is associated with this mandate payment and can be used to track it later.
 
 To know more about all the API params, please refer to the API documentation <a href="/payments/umap/api-reference#/category~payments/operation~payments#fetchLastByProductInstanceId" target="_blank">here</a>.
 
 <NextPage
-    info={{
-        description: "Other operations that can be performed on a mandate.  ",
-        slug: "/payments/umap/mandates/generic",
-        title: "Generic Operations",
-    }}
+  info={{
+    description: "Other operations that can be performed on a mandate.  ",
+    slug: "/payments/umap/mandates/generic",
+    title: "Generic Operations",
+  }}
 />
