--- a/content/payments/umap/mandates/one-shot/create.mdx
+++ b/content/payments/umap/mandates/one-shot/create.mdx
@@ -16,52 +16,62 @@ There are two ways to create a one time mandate—**Intent based** and **Collect
       label: "Intent based",
       content: (
         <Text>
-            <p>The process for mandate creation is described in the below diagram:</p>
-            <img
+          <p>
+            The process for mandate creation is described in the below diagram:
+          </p>
+          <img
             src="https://storage.googleapis.com/strapi-assets/latest/intent-mandate-creation/intent-mandate-creation.png"
             alt="Bridge"
-            />
-            <hr class="primary"/>
-            <p>The merchant will have to call the <b><i>create mandate API</i></b> with the correct set of parameters.</p>
-            <table>
-                <tbody>
-                    <tr>
-                        <th>Staging host</th>
-                        <td>
-                            <code>https://umap-dev-core.setu.co/api</code>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th>Method</th>
-                        <td>
-                            <code>POST</code>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th>Path</th>
-                        <td>
-                            <code>/v1/merchants/mandates</code>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th>Header</th>
-                        <td>
-                            <code>merchantId</code><br/>
-                            <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
-                            Generate this token using <a
-                                href="/payments/umap/api-integration"
-                                target="_blank">
-                                OAuth
-                            </a>.<br />
-                            <br />
-                            <code>Content-Type</code>—will be <code>application/json</code>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-            <h6>Sample request</h6>
-            <CodeBlockWithCopy language="json">
-                {`{
+          />
+          <hr class="primary" />
+          <p>
+            The merchant will have to call the{" "}
+            <b>
+              <i>create mandate API</i>
+            </b>{" "}
+            with the correct set of parameters.
+          </p>
+          <table>
+            <tbody>
+              <tr>
+                <th>Staging host</th>
+                <td>
+                  <code>https://umap-dev-core.setu.co/api</code>
+                </td>
+              </tr>
+              <tr>
+                <th>Method</th>
+                <td>
+                  <code>POST</code>
+                </td>
+              </tr>
+              <tr>
+                <th>Path</th>
+                <td>
+                  <code>/v1/merchants/mandates</code>
+                </td>
+              </tr>
+              <tr>
+                <th>Header</th>
+                <td>
+                  <code>merchantId</code>
+                  <br />
+                  <code>Authorization</code>: Bearer &lt;
+                  <b>insert_token_here</b>&gt;. Generate this token using{" "}
+                  <a href="/payments/umap/api-integration" target="_blank">
+                    OAuth
+                  </a>
+                  .<br />
+                  <br />
+                  <code>Content-Type</code>—will be{" "}
+                  <code>application/json</code>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+          <h6>Sample request</h6>
+          <CodeBlockWithCopy language="json">
+            {`{
     "allowMultipleDebit": false,
     "amount": 1000,
     "amountRule": "max",
@@ -88,48 +98,53 @@ There are two ways to create a one time mandate—**Intent based** and **Collect
     "startDate": "02012006",
     "transactionNote": "Transaction note"
 }`}
-            </CodeBlockWithCopy>
-            <p><b>Request body parameter values for creating an intent based one time mandate</b></p>
-            <table>
-                <tr>
-                    <th>parameter</th>
-                    <th>value</th>
-                </tr>
-                <tr>
-                    <td>frequency</td>
-                    <td>one time</td>
-                </tr>
-                <tr>
-                    <td>creationMode</td>
-                    <td>intent or qr</td>
-                </tr>
-                <tr>
-                    <td>initiationMode</td>
-                    <td>
-                        <p>01 if creationMode is qr</p>
-                        <p>04 if creationMode is intent</p>
-                    </td>
-                </tr>
-                <tr>
-                    <td>recurrenceValue</td>
-                    <td>0</td>
-                </tr>
-                <tr>
-                    <td>recurrenceRule</td>
-                    <td>on</td>
-                </tr>
-                <tr>
-                    <td>autoExecute</td>
-                    <td>false</td>
-                </tr>
-                <tr>
-                    <td>autoPreNotify</td>
-                    <td>false</td>
-                </tr>
-            </table>           
-            <h6>Sample response</h6>
-            <CodeBlockWithCopy language="json">
-                {`{
+          </CodeBlockWithCopy>
+          <p>
+            <b>
+              Request body parameter values for creating an intent based one
+              time mandate
+            </b>
+          </p>
+          <table>
+            <tr>
+              <th>parameter</th>
+              <th>value</th>
+            </tr>
+            <tr>
+              <td>frequency</td>
+              <td>one time</td>
+            </tr>
+            <tr>
+              <td>creationMode</td>
+              <td>intent or qr</td>
+            </tr>
+            <tr>
+              <td>initiationMode</td>
+              <td>
+                <p>01 if creationMode is qr</p>
+                <p>04 if creationMode is intent</p>
+              </td>
+            </tr>
+            <tr>
+              <td>recurrenceValue</td>
+              <td>0</td>
+            </tr>
+            <tr>
+              <td>recurrenceRule</td>
+              <td>on</td>
+            </tr>
+            <tr>
+              <td>autoExecute</td>
+              <td>false</td>
+            </tr>
+            <tr>
+              <td>autoPreNotify</td>
+              <td>false</td>
+            </tr>
+          </table>
+          <h6>Sample response</h6>
+          <CodeBlockWithCopy language="json">
+            {`{
     "allowMultipleDebit": false,
     "amount": 1000,
     "amountRule": "max",
@@ -162,77 +177,132 @@ There are two ways to create a one time mandate—**Intent based** and **Collect
     "transactionNote": "Transaction note",
     "txnId": "BTTZrc5gDFkuCr3n3I0ey4aNtzLOLR7K7aR"
 }`}
-            </CodeBlockWithCopy>
-            <b>In the above response:</b>
-            <ul>
-                <li><code>intentLink</code> or corresponding qr can be shared directly with customers via a communication channel.</li>
-                <li><code>id</code> is a unique mandate ID that is associated with this mandate and can be used to track it later.</li>
-            </ul>
-            <p>This request to generate a mandate creation intent link / qr is flexible and allows for many use cases. To know more about all the API params, please refer to the API documentation <a href="/payments/umap/api-reference#/category~mandates/operation~mandates#create" target="_blank">here</a>.</p>
-            <p>Post this, once the customer clicks on the intent link / scans the qr code and enters the mPIN, the merchant will receive webhooks for following events:</p>
-            <ul>
-                <li><b>mandate.initiated</b></li>
-                <li><b>mandate_operation.create.initiated</b></li>
-                <li><b>mandate.live</b> (if mandate creation is successful)</li>
-                <li><b>mandate_operation.create.success</b> (if mandate creation is successful)</li>
-                <li><b>mandate.rejected</b> (if mandate creation fails)</li>
-                <li><b>mandate_operation.create.failed</b> (if mandate creation fails)</li>
-            </ul>
-            <p>Read more about mandate status notifications <a href="/payments/umap/notifications/mandates">here</a> and mandate create operation notifications <a href="/payments/umap/notifications/mandates/create">here</a></p>
-            <p>In addition to the notifications, the merchant can also use <Link href="/payments/umap/mandates/otm/create#check-mandate-status">check mandate status API</Link> to check if mandate is <b>LIVE</b></p>
+          </CodeBlockWithCopy>
+          <b>In the above response:</b>
+          <ul>
+            <li>
+              <code>intentLink</code> or corresponding qr can be shared directly
+              with customers via a communication channel.
+            </li>
+            <li>
+              <code>id</code> is a unique mandate ID that is associated with
+              this mandate and can be used to track it later.
+            </li>
+          </ul>
+          <p>
+            This request to generate a mandate creation intent link / qr is
+            flexible and allows for many use cases. To know more about all the
+            API params, please refer to the API documentation{" "}
+            <a
+              href="/payments/umap/api-reference#/category~mandates/operation~mandates#create"
+              target="_blank"
+            >
+              here
+            </a>
+            .
+          </p>
+          <p>
+            Post this, once the customer clicks on the intent link / scans the
+            qr code and enters the mPIN, the merchant will receive webhooks for
+            following events:
+          </p>
+          <ul>
+            <li>
+              <b>mandate.initiated</b>
+            </li>
+            <li>
+              <b>mandate_operation.create.initiated</b>
+            </li>
+            <li>
+              <b>mandate.live</b> (if mandate creation is successful)
+            </li>
+            <li>
+              <b>mandate_operation.create.success</b> (if mandate creation is
+              successful)
+            </li>
+            <li>
+              <b>mandate.rejected</b> (if mandate creation fails)
+            </li>
+            <li>
+              <b>mandate_operation.create.failed</b> (if mandate creation fails)
+            </li>
+          </ul>
+          <p>
+            Read more about mandate status notifications{" "}
+            <a href="/payments/umap/notifications/mandates">here</a> and mandate
+            create operation notifications{" "}
+            <a href="/payments/umap/notifications/mandates/create">here</a>
+          </p>
+          <p>
+            In addition to the notifications, the merchant can also use{" "}
+            <Link href="/payments/umap/mandates/one-shot/create#check-mandate-status">
+              check mandate status API
+            </Link>{" "}
+            to check if mandate is <b>LIVE</b>
+          </p>
         </Text>
-        ),
+      ),
     },
     {
       key: "tab2",
       label: "Collect based",
       content: (
         <Text>
-            <p>The process for mandate creation is described in the below diagram:</p>
-            <img
-                src="https://storage.googleapis.com/strapi-assets/latest/collect-mandate-creation/collect-mandate-creation.png"
-                alt="Bridge"
-            />
-            <p>The merchant will have to call the <b><i>create mandate API</i></b> with the correct set of parameters.</p>
-            <table>
-                <tbody>
-                    <tr>
-                        <th>Staging host</th>
-                        <td>
-                            <code>https://umap-dev-core.setu.co/api</code>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th>Method</th>
-                        <td>
-                            <code>POST</code>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th>Path</th>
-                        <td>
-                            <code>/v1/merchants/mandates</code>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th>Header</th>
-                        <td>
-                            <code>merchantId</code><br/>
-                            <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
-                            Generate this token using <a
-                                href="/payments/umap/api-integration"
-                                target="_blank">
-                                OAuth
-                            </a>.<br />
-                            <br />
-                            <code>Content-Type</code>—will be <code>application/json</code>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-            <h6>Sample request</h6>
-            <CodeBlockWithCopy language="json">
-                {`{
+          <p>
+            The process for mandate creation is described in the below diagram:
+          </p>
+          <img
+            src="https://storage.googleapis.com/strapi-assets/latest/collect-mandate-creation/collect-mandate-creation.png"
+            alt="Bridge"
+          />
+          <p>
+            The merchant will have to call the{" "}
+            <b>
+              <i>create mandate API</i>
+            </b>{" "}
+            with the correct set of parameters.
+          </p>
+          <table>
+            <tbody>
+              <tr>
+                <th>Staging host</th>
+                <td>
+                  <code>https://umap-dev-core.setu.co/api</code>
+                </td>
+              </tr>
+              <tr>
+                <th>Method</th>
+                <td>
+                  <code>POST</code>
+                </td>
+              </tr>
+              <tr>
+                <th>Path</th>
+                <td>
+                  <code>/v1/merchants/mandates</code>
+                </td>
+              </tr>
+              <tr>
+                <th>Header</th>
+                <td>
+                  <code>merchantId</code>
+                  <br />
+                  <code>Authorization</code>: Bearer &lt;
+                  <b>insert_token_here</b>&gt;. Generate this token using{" "}
+                  <a href="/payments/umap/api-integration" target="_blank">
+                    OAuth
+                  </a>
+                  .<br />
+                  <br />
+                  <code>Content-Type</code>—will be{" "}
+                  <code>application/json</code>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+          <h6>Sample request</h6>
+          <CodeBlockWithCopy language="json">
+            {`{
     "allowMultipleDebit": false,
     "amount": 1000,
     "amountRule": "max",
@@ -259,45 +329,50 @@ There are two ways to create a one time mandate—**Intent based** and **Collect
     "startDate": "02012006",
     "transactionNote": "Transaction note"
 }`}
-            </CodeBlockWithCopy>
-            <p><b>Request body parameter values for creating a collect based one time mandate</b></p>
-            <table>
-                <tr>
-                    <th>parameter</th>
-                    <th>value</th>
-                </tr>
-                <tr>
-                    <td>frequency</td>
-                    <td>one time</td>
-                </tr>
-                <tr>
-                    <td>creationMode</td>
-                    <td>collect</td>
-                </tr>
-                <tr>
-                    <td>initiationMode</td>
-                    <td>00 if creationMode is collect</td>
-                </tr>
-                <tr>
-                    <td>recurrenceValue</td>
-                    <td>0</td>
-                </tr>
-                <tr>
-                    <td>recurrenceRule</td>
-                    <td>on</td>
-                </tr>
-                <tr>
-                    <td>autoExecute</td>
-                    <td>false</td>
-                </tr>
-                <tr>
-                    <td>autoPreNotify</td>
-                    <td>false</td>
-                </tr>
-            </table>
-            <h6>Sample response</h6>
-            <CodeBlockWithCopy language="json">
-                {`{
+          </CodeBlockWithCopy>
+          <p>
+            <b>
+              Request body parameter values for creating a collect based one
+              time mandate
+            </b>
+          </p>
+          <table>
+            <tr>
+              <th>parameter</th>
+              <th>value</th>
+            </tr>
+            <tr>
+              <td>frequency</td>
+              <td>one time</td>
+            </tr>
+            <tr>
+              <td>creationMode</td>
+              <td>collect</td>
+            </tr>
+            <tr>
+              <td>initiationMode</td>
+              <td>00 if creationMode is collect</td>
+            </tr>
+            <tr>
+              <td>recurrenceValue</td>
+              <td>0</td>
+            </tr>
+            <tr>
+              <td>recurrenceRule</td>
+              <td>on</td>
+            </tr>
+            <tr>
+              <td>autoExecute</td>
+              <td>false</td>
+            </tr>
+            <tr>
+              <td>autoPreNotify</td>
+              <td>false</td>
+            </tr>
+          </table>
+          <h6>Sample response</h6>
+          <CodeBlockWithCopy language="json">
+            {`{
     "allowMultipleDebit": false,
     "amount": 1000,
     "amountRule": "max",
@@ -329,74 +404,116 @@ There are two ways to create a one time mandate—**Intent based** and **Collect
     "transactionNote": "Transaction note",
     "txnId": "BTTZrc5gDFkuCr3n3I0ey4aNtzLOLR7K7aR"
 }`}
-            </CodeBlockWithCopy>
-            <b>In the above response:</b>
-            <ul>
-                <li><code>id</code> is a unique mandate ID that is associated with this mandate and can be used to track it later.</li>
-            </ul>
-            <p>This request to trigger mandate creation via collect flow is flexible and allows for many use cases. To know more about all the API params, please refer to the API documentation <a href="/payments/umap/api-reference#/category~mandates/operation~mandates#create" target="_blank">here</a>.</p>
-            <p>Post this, once the customer clicks on the mandate creation notification and enters the mPIN, the merchant will receive a webhook for following events:</p>
-            <ul>
-                <li><b>mandate.live</b> (if mandate creation is successful)</li>
-                <li><b>mandate_operation.create.success</b> (if mandate creation is successful)</li>
-                <li><b>mandate.rejected</b> (if mandate creation fails)</li>
-                <li><b>mandate_operation.create.failed</b> (if mandate creation fails)</li>
-            </ul>
-            <p>Read more about mandate status notifications <a href="/payments/umap/notifications/mandates">here</a> and mandate create operation notifications <a href="/payments/umap/notifications/mandates/create">here</a></p>
-            <p>In addition to the notifications, the merchant can also use <Link href="/payments/umap/mandates/otm/create#check-mandate-status">check mandate status API</Link> to check if mandate is <b>LIVE</b></p>
-            <p>Please refer to the Document Reference section for checking the API reference and the notifications.</p>
+          </CodeBlockWithCopy>
+          <b>In the above response:</b>
+          <ul>
+            <li>
+              <code>id</code> is a unique mandate ID that is associated with
+              this mandate and can be used to track it later.
+            </li>
+          </ul>
+          <p>
+            This request to trigger mandate creation via collect flow is
+            flexible and allows for many use cases. To know more about all the
+            API params, please refer to the API documentation{" "}
+            <a
+              href="/payments/umap/api-reference#/category~mandates/operation~mandates#create"
+              target="_blank"
+            >
+              here
+            </a>
+            .
+          </p>
+          <p>
+            Post this, once the customer clicks on the mandate creation
+            notification and enters the mPIN, the merchant will receive a
+            webhook for following events:
+          </p>
+          <ul>
+            <li>
+              <b>mandate.live</b> (if mandate creation is successful)
+            </li>
+            <li>
+              <b>mandate_operation.create.success</b> (if mandate creation is
+              successful)
+            </li>
+            <li>
+              <b>mandate.rejected</b> (if mandate creation fails)
+            </li>
+            <li>
+              <b>mandate_operation.create.failed</b> (if mandate creation fails)
+            </li>
+          </ul>
+          <p>
+            Read more about mandate status notifications{" "}
+            <a href="/payments/umap/notifications/mandates">here</a> and mandate
+            create operation notifications{" "}
+            <a href="/payments/umap/notifications/mandates/create">here</a>
+          </p>
+          <p>
+            In addition to the notifications, the merchant can also use{" "}
+            <Link href="/payments/umap/mandates/one-shot/create#check-mandate-status">
+              check mandate status API
+            </Link>{" "}
+            to check if mandate is <b>LIVE</b>
+          </p>
+          <p>
+            Please refer to the Document Reference section for checking the API
+            reference and the notifications.
+          </p>
         </Text>
       ),
     },
   ]}
 />
 
-<hr class="tertiary"/>
+<hr class="tertiary" />
 
 #### Check mandate status
 
 In addition to the notifications sent by UMAP, Merchant can use this API to check the status of a mandate.
 
 <table>
-    <tbody>
-        <tr>
-            <th>Staging host</th>
-            <td>
-                <code>https://umap-dev-core.setu.co/api</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Method</th>
-            <td>
-                <code>GET</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Path</th>
-            <td>
-                <code>/v1/merchants/mandates/&#123;id&#125;</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Header</th>
-            <td>
-                <code>merchantId</code><br/>
-                <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
-                Generate this token using <a
-                    href="/payments/umap/api-integration"
-                    target="_blank">
-                    OAuth
-                </a>.<br />
-                <br />
-                <code>Content-Type</code>—will be <code>application/json</code>
-            </td>
-        </tr>
-    </tbody>
+  <tbody>
+    <tr>
+      <th>Staging host</th>
+      <td>
+        <code>https://umap-dev-core.setu.co/api</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Method</th>
+      <td>
+        <code>GET</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Path</th>
+      <td>
+        <code>/v1/merchants/mandates/&#123;id&#125;</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Header</th>
+      <td>
+        <code>merchantId</code>
+        <br />
+        <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
+        Generate this token using{" "}
+        <a href="/payments/umap/api-integration" target="_blank">
+          OAuth
+        </a>
+        .<br />
+        <br />
+        <code>Content-Type</code>—will be <code>application/json</code>
+      </td>
+    </tr>
+  </tbody>
 </table>
 
 <h6>Sample response</h6>
 <CodeBlockWithCopy language="json">
-{`{
+  {`{
     "allowMultipleDebit": false,
     "amount": 1000,
     "amountRule": "max",
@@ -432,16 +549,31 @@ In addition to the notifications sent by UMAP, Merchant can use this API to chec
 </CodeBlockWithCopy>
 <b>In the above response:</b>
 <ul>
-    <li><code>id</code> is a unique mandate ID that is associated with this mandate and can be used to track it later.</li>
-    <li><code>umn</code> is a unique mandate identifier that is associated with this mandate and is needed for pre debit notification and execution APIs.</li>
+  <li>
+    <code>id</code> is a unique mandate ID that is associated with this mandate
+    and can be used to track it later.
+  </li>
+  <li>
+    <code>umn</code> is a unique mandate identifier that is associated with this
+    mandate and is needed for pre debit notification and execution APIs.
+  </li>
 </ul>
 
-<p>To know more about all the API params, please refer to the API documentation <a href="/payments/umap/api-reference#/category~mandates/operation~mandates#fetchById" target="_blank">here</a>.</p>
+<p>
+  To know more about all the API params, please refer to the API documentation{" "}
+  <a
+    href="/payments/umap/api-reference#/category~mandates/operation~mandates#fetchById"
+    target="_blank"
+  >
+    here
+  </a>
+  .
+</p>
 
 <NextPage
-    info={{
-        description: "Send pre debit notification.  ",
-        slug: "/payments/umap/mandates/otm/pre-debit-notify",
-        title: "Pre debit notification",
-    }}
+  info={{
+    description: "Send pre debit notification.  ",
+    slug: "/payments/umap/mandates/one-shot/pre-debit-notify",
+    title: "Pre debit notification",
+  }}
 />
