--- a/content/payments/umap/mandates/recur/pre-debit-notify.mdx
+++ b/content/payments/umap/mandates/recur/pre-debit-notify.mdx
@@ -8,71 +8,75 @@ visible_in_sidebar: true
 ## Send a pre debit notification
 
 <Text size="small" weight="600">
-    PREREQUISITES&nbsp;
+  PREREQUISITES&nbsp;
 </Text>
-<a href="/payments/umap/mandates/recurring/create" target="_self">🌟 Create recurring mandate ↗</a>
+<a href="/payments/umap/mandates/recur/create" target="_self">
+  🌟 Create recurring mandate ↗
+</a>
 
 <br />
 
 Once the mandate is **LIVE** the merchant needs to send a pre debit notification 48 - 72 Hrs before debit / execution to let the customer be notified of the upcoming debit.
 
 <Callout type="tip">
-    Merchant intervention is only needed for a pre debit notification if{" "}
-    <code>autoExecute</code> and <code>autoPreNotify</code> are set to{" "}
-    <code>false</code> while creating a mandate
+  Merchant intervention is only needed for a pre debit notification if{" "}
+  <code>autoExecute</code> and <code>autoPreNotify</code> are set to{" "}
+  <code>false</code> while creating a mandate
 </Callout>
 
 The process for mandate pre debit notification is described in the below diagram:
 
 <img
-    src="https://storage.googleapis.com/strapi-assets/latest/update-mandate-pre-debit-notification/update-mandate-pre-debit-notification.png"
-    alt="Bridge"
+  src="https://storage.googleapis.com/strapi-assets/latest/update-mandate-pre-debit-notification/update-mandate-pre-debit-notification.png"
+  alt="Bridge"
 />
 
 The merchant will have to call the **<i>send mandate pre debit notification API</i>** with the correct set of parameters.
 
 <table>
-    <tbody>
-        <tr>
-            <th>Staging host</th>
-            <td>
-                <code>https://umap-dev-core.setu.co/api</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Method</th>
-            <td>
-                <code>POST</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Path</th>
-            <td>
-                <code>/v1/merchants/mandates/&#123;mandateId&#125;/notify</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Header</th>
-            <td>
-                <code>merchantId</code>
-                <br />
-                <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>
-                &gt;. Generate this token using{" "}
-                <a href="/payments/umap/api-integration" target="_blank">
-                    OAuth
-                </a>
-                .<br />
-                <br />
-                <code>Content-Type</code>—will be <code>application/json</code>
-            </td>
-        </tr>
-    </tbody>
+  <tbody>
+    <tr>
+      <th>Staging host</th>
+      <td>
+        <code>https://umap-dev-core.setu.co/api</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Method</th>
+      <td>
+        <code>POST</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Path</th>
+      <td>
+        <code>/v1/merchants/mandates/&#123;mandateId&#125;/notify</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Header</th>
+      <td>
+        <code>merchantId</code>
+        <br />
+        <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>
+        &gt;. Generate this token using <a
+          href="/payments/umap/api-integration"
+          target="_blank"
+        >
+          OAuth
+        </a>
+        .<br />
+        <br />
+        <code>Content-Type</code>—will be <code>application/json</code>
+      </td>
+    </tr>
+  </tbody>
 </table>
 
 ###### Sample request
 
 <CodeBlockWithCopy language="json">
-    {`{
+  {`{
     "amount": 1000,
     "executionDate": "04012006",
     "merchantReferenceId": "ABC1234789",
@@ -82,42 +86,42 @@ The merchant will have to call the **<i>send mandate pre debit notification API<
 </CodeBlockWithCopy>
 
 <p>
-    <b>
-        Request body parameter values for sending pre debit notification for a
-        recurring mandate
-    </b>
+  <b>
+    Request body parameter values for sending pre debit notification for a
+    recurring mandate
+  </b>
 </p>
 <table>
-    <tr>
-        <th>parameter</th>
-        <th>value</th>
-    </tr>
-    <tr>
-        <td>amount</td>
-        <td>
-            must be as per the <code>amountRule</code> and{" "}
-            <code>maxAmountLimit</code> configured while creating the mandate
-        </td>
-    </tr>
-    <tr>
-        <td>executionDate</td>
-        <td>
-            must be <code>48 - 72 Hrs</code> ahead of current time
-        </td>
-    </tr>
-    <tr>
-        <td>umn</td>
-        <td>
-            can be derived from the notifications received by the merchant
-            during mandate creation flow or via check mandate status API
-        </td>
-    </tr>
+  <tr>
+    <th>parameter</th>
+    <th>value</th>
+  </tr>
+  <tr>
+    <td>amount</td>
+    <td>
+      must be as per the <code>amountRule</code> and <code>maxAmountLimit</code>{" "}
+      configured while creating the mandate
+    </td>
+  </tr>
+  <tr>
+    <td>executionDate</td>
+    <td>
+      must be <code>48 - 72 Hrs</code> ahead of current time
+    </td>
+  </tr>
+  <tr>
+    <td>umn</td>
+    <td>
+      can be derived from the notifications received by the merchant during
+      mandate creation flow or via check mandate status API
+    </td>
+  </tr>
 </table>
 
 ###### Sample response
 
 <CodeBlockWithCopy language="json">
-    {`{
+  {`{
   "amount": 1000,
   "createdAt": "2023-09-04 12:08:20.202644 +0530 IST",
   "executionDate": "04012006",
@@ -134,40 +138,40 @@ The merchant will have to call the **<i>send mandate pre debit notification API<
 
 **In the above response:**
 
--   `id` is a unique ID that is associated with this mandate pre debit notification and can be used to track it later.
+- `id` is a unique ID that is associated with this mandate pre debit notification and can be used to track it later.
 
 To know more about all the API params, please refer to the API documentation <a href="/payments/umap/api-reference#/category~mandates/operation~mandates#notify" target="_blank">here</a>.
 
 <p>UMAP will send notifications to the merchant for the following events:</p>
 <ul>
-    <li>
-        <b>mandate_operation.notify.success</b> (if mandate pre debit
-        notification is successful)
-    </li>
-    <li>
-        <b>mandate_operation.notify.failed</b> (if mandate pre debit
-        notification fails)
-    </li>
+  <li>
+    <b>mandate_operation.notify.success</b> (if mandate pre debit notification
+    is successful)
+  </li>
+  <li>
+    <b>mandate_operation.notify.failed</b> (if mandate pre debit notification
+    fails)
+  </li>
 </ul>
 <p>
-    Read more about mandate pre debit notification operation notifications{" "}
-    <a href="/payments/umap/notifications/mandates/notify">here</a>
+  Read more about mandate pre debit notification operation notifications{" "}
+  <a href="/payments/umap/notifications/mandates/notify">here</a>
 </p>
 
 <p>
-    In addition to the notifications, the merchant can also use{" "}
-    <Link href="/payments/umap/mandates/recurring/pre-debit-notify#check-mandate-pre-debit-notification-status">
-        check mandate pre debit notification status API
-    </Link>{" "}
-    to check if pre debit notification is <b>successful</b>
+  In addition to the notifications, the merchant can also use{" "}
+  <Link href="/payments/umap/mandates/recur/pre-debit-notify#check-mandate-pre-debit-notification-status">
+    check mandate pre debit notification status API
+  </Link>{" "}
+  to check if pre debit notification is <b>successful</b>
 </p>
 
 <Callout type="highlight">
-    If <code>autoExecute</code> and <code>autoPreNotify</code> are set to{" "}
-    <code>true</code> while creating a mandate, UMAP will schedule pre debit
-    notifications and send notifications to the merchant for{" "}
-    <code>pre debit notification confirmation</code> and{" "}
-    <code>mandate status</code> in every recurrence cycle
+  If <code>autoExecute</code> and <code>autoPreNotify</code> are set to{" "}
+  <code>true</code> while creating a mandate, UMAP will schedule pre debit
+  notifications and send notifications to the merchant for{" "}
+  <code>pre debit notification confirmation</code> and{" "}
+  <code>mandate status</code> in every recurrence cycle
 </Callout>
 
 Please refer to the Document Reference section for checking the API reference and the notifications.
@@ -179,48 +183,50 @@ Please refer to the Document Reference section for checking the API reference an
 In addition to the notifications sent by UMAP, Merchant can use this API to check the status of a mandate pre debit notification.
 
 <table>
-    <tbody>
-        <tr>
-            <th>Staging host</th>
-            <td>
-                <code>https://umap-dev-core.setu.co/api</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Method</th>
-            <td>
-                <code>GET</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Path</th>
-            <td>
-                <code>
-                    /v1/merchants/mandate-pre-debit-notifications/&#123;id&#125;
-                </code>
-            </td>
-        </tr>
-        <tr>
-            <th>Header</th>
-            <td>
-                <code>merchantId</code>
-                <br />
-                <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>
-                &gt;. Generate this token using{" "}
-                <a href="/payments/umap/api-integration" target="_blank">
-                    OAuth
-                </a>
-                .<br />
-                <br />
-                <code>Content-Type</code>—will be <code>application/json</code>
-            </td>
-        </tr>
-    </tbody>
+  <tbody>
+    <tr>
+      <th>Staging host</th>
+      <td>
+        <code>https://umap-dev-core.setu.co/api</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Method</th>
+      <td>
+        <code>GET</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Path</th>
+      <td>
+        <code>
+          /v1/merchants/mandate-pre-debit-notifications/&#123;id&#125;
+        </code>
+      </td>
+    </tr>
+    <tr>
+      <th>Header</th>
+      <td>
+        <code>merchantId</code>
+        <br />
+        <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>
+        &gt;. Generate this token using <a
+          href="/payments/umap/api-integration"
+          target="_blank"
+        >
+          OAuth
+        </a>
+        .<br />
+        <br />
+        <code>Content-Type</code>—will be <code>application/json</code>
+      </td>
+    </tr>
+  </tbody>
 </table>
 
 <h6>Sample response</h6>
 <CodeBlockWithCopy language="json">
-    {`{
+  {`{
   "amount": 1000,
   "createdAt": "2023-09-04 12:08:20.202644 +0530 IST",
   "executionDate": "04012006",
@@ -236,27 +242,27 @@ In addition to the notifications sent by UMAP, Merchant can use this API to chec
 </CodeBlockWithCopy>
 <b>In the above response:</b>
 <ul>
-    <li>
-        <code>id</code> is a unique ID that is associated with this mandate pre
-        debit notification and can be used to track it later.
-    </li>
+  <li>
+    <code>id</code> is a unique ID that is associated with this mandate pre
+    debit notification and can be used to track it later.
+  </li>
 </ul>
 
 <p>
-    To know more about all the API params, please refer to the API documentation{" "}
-    <a
-        href="/payments/umap/api-reference#/category~mandates/operation~mandates#fetchMandatePreDebitNotificationById"
-        target="_blank"
-    >
-        here
-    </a>
-    .
+  To know more about all the API params, please refer to the API documentation{" "}
+  <a
+    href="/payments/umap/api-reference#/category~mandates/operation~mandates#fetchMandatePreDebitNotificationById"
+    target="_blank"
+  >
+    here
+  </a>
+  .
 </p>
 
 <NextPage
-    info={{
-        description: "Execute mandate.  ",
-        slug: "/payments/umap/mandates/recurring/execute",
-        title: "Execute mandate",
-    }}
+  info={{
+    description: "Execute mandate.  ",
+    slug: "/payments/umap/mandates/recur/execute",
+    title: "Execute mandate",
+  }}
 />
