--- a/content/payments/umap/mandates/reserve-plus/create.mdx
+++ b/content/payments/umap/mandates/reserve-plus/create.mdx
@@ -6,48 +6,56 @@ visible_in_sidebar: true
 ---
 
 ## Create single block multi-debit mandate
-<p>The merchant will have to call the <b><i>create mandate API</i></b> with the correct set of parameters.</p>
+
+<p>
+  The merchant will have to call the{" "}
+  <b>
+    <i>create mandate API</i>
+  </b>{" "}
+  with the correct set of parameters.
+</p>
 <table>
-    <tbody>
-        <tr>
-            <th>Staging host</th>
-            <td>
-                <code>https://umap-dev-core.setu.co/api</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Method</th>
-            <td>
-                <code>POST</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Path</th>
-            <td>
-                <code>/v1/merchants/mandates</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Header</th>
-            <td>
-                <code>merchantId</code><br/>
-                <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
-                Generate this token using <a
-                href="/payments/umap/api-integration"
-                target="_blank">
-                OAuth
-                </a>.<br />
-                <br />
-                <code>Content-Type</code>—will be <code>application/json</code>
-            </td>
-        </tr>
-    </tbody>
+  <tbody>
+    <tr>
+      <th>Staging host</th>
+      <td>
+        <code>https://umap-dev-core.setu.co/api</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Method</th>
+      <td>
+        <code>POST</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Path</th>
+      <td>
+        <code>/v1/merchants/mandates</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Header</th>
+      <td>
+        <code>merchantId</code>
+        <br />
+        <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
+        Generate this token using{" "}
+        <a href="/payments/umap/api-integration" target="_blank">
+          OAuth
+        </a>
+        .<br />
+        <br />
+        <code>Content-Type</code>—will be <code>application/json</code>
+      </td>
+    </tr>
+  </tbody>
 </table>
 
 <h6>Sample request</h6>
 
 <CodeBlockWithCopy language="json">
-{`{
+  {`{
     "allowMultipleDebit": true,
     "amount": 1000,
     "amountRule": "max",
@@ -76,61 +84,66 @@ visible_in_sidebar: true
 }`}
 </CodeBlockWithCopy>
 
-<p><b>Request body parameter values for creating an intent based single block multi debit mandate</b></p>
+<p>
+  <b>
+    Request body parameter values for creating an intent based single block
+    multi debit mandate
+  </b>
+</p>
 <table>
-    <tr>
-        <th>Parameter</th>
-        <th>Value</th>
-    </tr>
-    <tr>
-        <td>frequency</td>
-        <td>as presented</td>
-    </tr>
-    <tr>
-        <td>recurrenceRule</td>
-        <td>on</td>
-    </tr>
-    <tr>
-        <td>recurrenceValue</td>
-        <td>0</td>
-    </tr>
-    <tr>
-        <td>blockFunds</td>
-        <td>true</td>
-    </tr>
-    <tr>
-        <td>purpose</td>
-        <td>76</td>
-    </tr>
-    <tr>
-        <td>customerRevocable</td>
-        <td>false</td>
-    </tr>
-    <tr>
-        <td>creationMode</td>
-        <td>intent or qr</td>
-    </tr>
-    <tr>
-        <td>initiationMode</td>
-        <td>
-            <p>01 if creationMode is qr</p>
-            <p>04 if creationMode is intent</p>
-        </td>
-    </tr>
-    <tr>
-        <td>autoExecute</td>
-        <td>false</td>
-    </tr>
-    <tr>
-        <td>autoPreNotify</td>
-        <td>false</td>
-    </tr>
+  <tr>
+    <th>Parameter</th>
+    <th>Value</th>
+  </tr>
+  <tr>
+    <td>frequency</td>
+    <td>as presented</td>
+  </tr>
+  <tr>
+    <td>recurrenceRule</td>
+    <td>on</td>
+  </tr>
+  <tr>
+    <td>recurrenceValue</td>
+    <td>0</td>
+  </tr>
+  <tr>
+    <td>blockFunds</td>
+    <td>true</td>
+  </tr>
+  <tr>
+    <td>purpose</td>
+    <td>76</td>
+  </tr>
+  <tr>
+    <td>customerRevocable</td>
+    <td>false</td>
+  </tr>
+  <tr>
+    <td>creationMode</td>
+    <td>intent or qr</td>
+  </tr>
+  <tr>
+    <td>initiationMode</td>
+    <td>
+      <p>01 if creationMode is qr</p>
+      <p>04 if creationMode is intent</p>
+    </td>
+  </tr>
+  <tr>
+    <td>autoExecute</td>
+    <td>false</td>
+  </tr>
+  <tr>
+    <td>autoPreNotify</td>
+    <td>false</td>
+  </tr>
 </table>
 
 <h6>Sample response</h6>
 
 <CodeBlockWithCopy language="json">
-    {`{
+  {`{
   "allowMultipleDebit": true,
   "amount": 1000,
   "amountRule": "max",
@@ -167,76 +180,120 @@ visible_in_sidebar: true
 
 <b>In the above response</b>
 <ul>
-    <li>`intentLink` or corresponding qr can be shared directly with customers via a communication channel.</li>
-    <li>`id` is a unique mandate ID that is associated with this mandate and can be used to track it later.</li>
+  <li>
+    `intentLink` or corresponding qr can be shared directly with customers via a
+    communication channel.
+  </li>
+  <li>
+    `id` is a unique mandate ID that is associated with this mandate and can be
+    used to track it later.
+  </li>
 </ul>
 
-<p>This request to generate a mandate creation intent link / qr is flexible and allows for many use cases. To know more about all the API params, please refer to the API documentation <a href="/payments/umap/api-reference#/category~mandates/operation~mandates#create" target="_blank">here</a>.</p>
+<p>
+  This request to generate a mandate creation intent link / qr is flexible and
+  allows for many use cases. To know more about all the API params, please refer
+  to the API documentation{" "}
+  <a
+    href="/payments/umap/api-reference#/category~mandates/operation~mandates#create"
+    target="_blank"
+  >
+    here
+  </a>
+  .
+</p>
 <ul>
-    <li><b>mandate.initiated</b></li>
-    <li><b>mandate_operation.create.initiated</b></li>
-    <li><b>mandate.live</b> (if mandate creation is successful)</li>
-    <li><b>mandate_operation.create.success</b> (if mandate creation is successful)</li>
-    <li><b>mandate.rejected</b> (if mandate creation fails)</li>
-    <li><b>mandate_operation.create.failed</b> (if mandate creation fails)</li>
+  <li>
+    <b>mandate.initiated</b>
+  </li>
+  <li>
+    <b>mandate_operation.create.initiated</b>
+  </li>
+  <li>
+    <b>mandate.live</b> (if mandate creation is successful)
+  </li>
+  <li>
+    <b>mandate_operation.create.success</b> (if mandate creation is successful)
+  </li>
+  <li>
+    <b>mandate.rejected</b> (if mandate creation fails)
+  </li>
+  <li>
+    <b>mandate_operation.create.failed</b> (if mandate creation fails)
+  </li>
 </ul>
-<p>Read more about mandate status notifications <a href="/payments/umap/notifications/mandates">here</a> and mandate create operation notifications <a href="/payments/umap/notifications/mandates/create">here</a></p>
-<p>A merchant can use <Link href="/payments/umap/mandates/single-block-multi-debit/create#check-mandate-status">check mandate status API</Link> to check if the mandate is <code>LIVE</code> (this is an alternative way to get status, aside from the notifications sent by UMAP)</p>
-<p>Please refer to the Document Reference section for checking the API reference and the notifications.</p>
-
+<p>
+  Read more about mandate status notifications{" "}
+  <a href="/payments/umap/notifications/mandates">here</a> and mandate create
+  operation notifications{" "}
+  <a href="/payments/umap/notifications/mandates/create">here</a>
+</p>
+<p>
+  A merchant can use{" "}
+  <Link href="/payments/umap/mandates/reserve-plus/create#check-mandate-status">
+    check mandate status API
+  </Link>{" "}
+  to check if the mandate is <code>LIVE</code> (this is an alternative way to
+  get status, aside from the notifications sent by UMAP)
+</p>
+<p>
+  Please refer to the Document Reference section for checking the API reference
+  and the notifications.
+</p>
 
 <p>The process for mandate creation is described in the below diagram</p>
 <img
-src="https://storage.googleapis.com/strapi-assets/latest/intent-mandate-creation/intent-mandate-creation.png"
-alt="Bridge"
+  src="https://storage.googleapis.com/strapi-assets/latest/intent-mandate-creation/intent-mandate-creation.png"
+  alt="Bridge"
 />
 
-<hr class="primary"/>
+<hr class="primary" />
 
 #### Check mandate status
 
 A merchant can use this API to check the status of a mandate (this is an alternative way to get status, aside from the notifications sent by UMAP).
 
 <table>
-    <tbody>
-        <tr>
-            <th>Staging host</th>
-            <td>
-                <code>https://umap-dev-core.setu.co/api</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Method</th>
-            <td>
-                <code>GET</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Path</th>
-            <td>
-                <code>/v1/merchants/mandates/&#123;id&#125;</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Header</th>
-            <td>
-                <code>merchantId</code><br/>
-                <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
-                Generate this token using <a
-                    href="/payments/umap/api-integration"
-                    target="_blank">
-                    OAuth
-                </a>.<br />
-                <br />
-                <code>Content-Type</code>—will be <code>application/json</code>
-            </td>
-        </tr>
-    </tbody>
+  <tbody>
+    <tr>
+      <th>Staging host</th>
+      <td>
+        <code>https://umap-dev-core.setu.co/api</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Method</th>
+      <td>
+        <code>GET</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Path</th>
+      <td>
+        <code>/v1/merchants/mandates/&#123;id&#125;</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Header</th>
+      <td>
+        <code>merchantId</code>
+        <br />
+        <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
+        Generate this token using{" "}
+        <a href="/payments/umap/api-integration" target="_blank">
+          OAuth
+        </a>
+        .<br />
+        <br />
+        <code>Content-Type</code>—will be <code>application/json</code>
+      </td>
+    </tr>
+  </tbody>
 </table>
 
 <h6>Sample response</h6>
 <CodeBlockWithCopy language="json">
-{`{
+  {`{
     "allowMultipleDebit": true,
     "amount": 1000,
     "amountRule": "max",
@@ -274,16 +331,31 @@ A merchant can use this API to check the status of a mandate (this is an alterna
 
 <b>In the above response</b>
 <ul>
-    <li><code>id</code> is a unique mandate ID that is associated with this mandate and can be used to track it later.</li>
-    <li><code>umn</code> is a unique mandate identifier that is associated with this mandate and is needed for pre debit notification and execution APIs.</li>
+  <li>
+    <code>id</code> is a unique mandate ID that is associated with this mandate
+    and can be used to track it later.
+  </li>
+  <li>
+    <code>umn</code> is a unique mandate identifier that is associated with this
+    mandate and is needed for pre debit notification and execution APIs.
+  </li>
 </ul>
 
-<p>To know more about all the API params, please refer to the API documentation <a href="/payments/umap/api-reference#/category~mandates/operation~mandates#fetchById" target="_blank">here</a>.</p>
+<p>
+  To know more about all the API params, please refer to the API documentation{" "}
+  <a
+    href="/payments/umap/api-reference#/category~mandates/operation~mandates#fetchById"
+    target="_blank"
+  >
+    here
+  </a>
+  .
+</p>
 
 <NextPage
-    info={{
-        description: "Execute mandate.  ",
-        slug: "/payments/umap/mandates/single-block-multi-debit/execute",
-        title: "Execute mandate",
-    }}
+  info={{
+    description: "Execute mandate.  ",
+    slug: "/payments/umap/mandates/reserve-plus/execute",
+    title: "Execute mandate",
+  }}
 />
