--- a/content/payments/umap/mandates/reserve-plus/execute.mdx
+++ b/content/payments/umap/mandates/reserve-plus/execute.mdx
@@ -8,9 +8,11 @@ visible_in_sidebar: true
 ## Execute mandate
 
 <Text size="small" weight="600">
-    PREREQUISITES&nbsp;
+  PREREQUISITES&nbsp;
 </Text>
-<a href="/payments/umap/mandates/single-block-multi-debit/create" target="_self">🌟 Create single block multi debit mandate ↗</a>
+<a href="/payments/umap/mandates/reserve-plus/create" target="_self">
+  🌟 Create single block multi debit mandate ↗
+</a>
 
 <hr class="primary" />
 
@@ -21,49 +23,49 @@ The process for mandate execution is described in the below diagram:
 The merchant will have to call the **<i>execute mandate API</i>** with the correct set of parameters.
 
 <table>
-    <tbody>
-        <tr>
-            <th>Staging host</th>
-            <td>
-                <code>https://umap-dev-core.setu.co/api</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Method</th>
-            <td>
-                <code>POST</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Path</th>
-            <td>
-                <code>
-                    /v1/merchants/mandates/&#123;mandateId&#125;/execute
-                </code>
-            </td>
-        </tr>
-        <tr>
-            <th>Header</th>
-            <td>
-                <code>merchantId</code>
-                <br />
-                <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>
-                &gt;. Generate this token using{" "}
-                <a href="/payments/umap/api-integration" target="_blank">
-                    OAuth
-                </a>
-                .<br />
-                <br />
-                <code>Content-Type</code>—will be <code>application/json</code>
-            </td>
-        </tr>
-    </tbody>
+  <tbody>
+    <tr>
+      <th>Staging host</th>
+      <td>
+        <code>https://umap-dev-core.setu.co/api</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Method</th>
+      <td>
+        <code>POST</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Path</th>
+      <td>
+        <code>/v1/merchants/mandates/&#123;mandateId&#125;/execute</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Header</th>
+      <td>
+        <code>merchantId</code>
+        <br />
+        <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>
+        &gt;. Generate this token using <a
+          href="/payments/umap/api-integration"
+          target="_blank"
+        >
+          OAuth
+        </a>
+        .<br />
+        <br />
+        <code>Content-Type</code>—will be <code>application/json</code>
+      </td>
+    </tr>
+  </tbody>
 </table>
 
 ###### Sample request
 
 <CodeBlockWithCopy language="json">
-    {`{
+  {`{
     "amount": 1000,
     "merchantReferenceId": "ABC1234789",
     "remark": "Transaction for car loan emi",
@@ -73,34 +75,33 @@ The merchant will have to call the **<i>execute mandate API</i>** with the corre
 </CodeBlockWithCopy>
 
 <p>
-    <b>Request body parameter values for executing a recurring mandate</b>
+  <b>Request body parameter values for executing a recurring mandate</b>
 </p>
 <table>
-    <tr>
-        <th>parameter</th>
-        <th>value</th>
-    </tr>
-    <tr>
-        <td>amount</td>
-        <td>
-            must be such that the cumulative amount debited for the given
-            mandate post current debit is within the amount that is blocked in
-            customer's account
-        </td>
-    </tr>
-    <tr>
-        <td>umn</td>
-        <td>
-            can be derived from the notifications received by the merchant
-            during mandate creation flow or via check mandate status API
-        </td>
-    </tr>
+  <tr>
+    <th>parameter</th>
+    <th>value</th>
+  </tr>
+  <tr>
+    <td>amount</td>
+    <td>
+      must be such that the cumulative amount debited for the given mandate post
+      current debit is within the amount that is blocked in customer's account
+    </td>
+  </tr>
+  <tr>
+    <td>umn</td>
+    <td>
+      can be derived from the notifications received by the merchant during
+      mandate creation flow or via check mandate status API
+    </td>
+  </tr>
 </table>
 
 ###### Sample response
 
 <CodeBlockWithCopy language="json">
-    {`{
+  {`{
   "amount": 1000,
   "createdAt": "2023-09-04 12:08:20.202644 +0530 IST",
   "id": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
@@ -117,31 +118,31 @@ The merchant will have to call the **<i>execute mandate API</i>** with the corre
 
 **In the above response:**
 
--   `id` is a unique ID that is associated with this mandate execution and can be used to track it later.
+- `id` is a unique ID that is associated with this mandate execution and can be used to track it later.
 
 To know more about all the API params, please refer to the API documentation <a href="/payments/umap/api-reference#/category~mandates/operation~mandates#execute" target="_blank">here</a>.
 
 <p>UMAP will send notifications to the merchant for the following events:</p>
 <ul>
-    <li>
-        <b>mandate_operation.execute.success</b> (if mandate execution is
-        successful)
-    </li>
-    <li>
-        <b>mandate_operation.execute.failed</b> (if mandate execution fails)
-    </li>
+  <li>
+    <b>mandate_operation.execute.success</b> (if mandate execution is
+    successful)
+  </li>
+  <li>
+    <b>mandate_operation.execute.failed</b> (if mandate execution fails)
+  </li>
 </ul>
 <p>
-    Read more about mandate execute operation notifications{" "}
-    <a href="/payments/umap/notifications/mandates/execute">here</a>
+  Read more about mandate execute operation notifications{" "}
+  <a href="/payments/umap/notifications/mandates/execute">here</a>
 </p>
 
 <p>
-    In addition to the notifications, the merchant can also use{" "}
-    <Link href="/payments/umap/mandates/single-block-multi-debit/execute#check-mandate-execution-status">
-        check mandate execution status API
-    </Link>{" "}
-    to check if execution is <b>successful</b>
+  In addition to the notifications, the merchant can also use{" "}
+  <Link href="/payments/umap/mandates/reserve-plus/execute#check-mandate-execution-status">
+    check mandate execution status API
+  </Link>{" "}
+  to check if execution is <b>successful</b>
 </p>
 
 Please refer to the Document Reference section for checking the API reference and the notifications.
@@ -153,46 +154,48 @@ Please refer to the Document Reference section for checking the API reference an
 In addition to the notifications sent by UMAP, Merchant can use this API to check the status of a mandate execution.
 
 <table>
-    <tbody>
-        <tr>
-            <th>Staging host</th>
-            <td>
-                <code>https://umap-dev-core.setu.co/api</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Method</th>
-            <td>
-                <code>GET</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Path</th>
-            <td>
-                <code>/v1/merchants/mandate-executions/&#123;id&#125;</code>
-            </td>
-        </tr>
-        <tr>
-            <th>Header</th>
-            <td>
-                <code>merchantId</code>
-                <br />
-                <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>
-                &gt;. Generate this token using{" "}
-                <a href="/payments/umap/api-integration" target="_blank">
-                    OAuth
-                </a>
-                .<br />
-                <br />
-                <code>Content-Type</code>—will be <code>application/json</code>
-            </td>
-        </tr>
-    </tbody>
+  <tbody>
+    <tr>
+      <th>Staging host</th>
+      <td>
+        <code>https://umap-dev-core.setu.co/api</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Method</th>
+      <td>
+        <code>GET</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Path</th>
+      <td>
+        <code>/v1/merchants/mandate-executions/&#123;id&#125;</code>
+      </td>
+    </tr>
+    <tr>
+      <th>Header</th>
+      <td>
+        <code>merchantId</code>
+        <br />
+        <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>
+        &gt;. Generate this token using <a
+          href="/payments/umap/api-integration"
+          target="_blank"
+        >
+          OAuth
+        </a>
+        .<br />
+        <br />
+        <code>Content-Type</code>—will be <code>application/json</code>
+      </td>
+    </tr>
+  </tbody>
 </table>
 
 <h6>Sample response</h6>
 <CodeBlockWithCopy language="json">
-    {`{
+  {`{
   "amount": 1000,
   "createdAt": "2023-09-04 12:08:20.202644 +0530 IST",
   "id": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
@@ -208,27 +211,27 @@ In addition to the notifications sent by UMAP, Merchant can use this API to chec
 </CodeBlockWithCopy>
 <b>In the above response:</b>
 <ul>
-    <li>
-        <code>id</code> is a unique ID that is associated with this mandate
-        execution and can be used to track it later.
-    </li>
+  <li>
+    <code>id</code> is a unique ID that is associated with this mandate
+    execution and can be used to track it later.
+  </li>
 </ul>
 
 <p>
-    To know more about all the API params, please refer to the API documentation{" "}
-    <a
-        href="/payments/umap/api-reference#/category~mandates/operation~mandates#fetchMandateExecutionById"
-        target="_blank"
-    >
-        here
-    </a>
-    .
+  To know more about all the API params, please refer to the API documentation{" "}
+  <a
+    href="/payments/umap/api-reference#/category~mandates/operation~mandates#fetchMandateExecutionById"
+    target="_blank"
+  >
+    here
+  </a>
+  .
 </p>
 
 <NextPage
-    info={{
-        description: "Check mandate payment status.  ",
-        slug: "/payments/umap/mandates/recurring/check-status",
-        title: "Check mandate payment status",
-    }}
+  info={{
+    description: "Check mandate payment status.  ",
+    slug: "/payments/umap/mandates/recur/check-status",
+    title: "Check mandate payment status",
+  }}
 />
